src/ANT/CssParser.java
// Generated from src/ANT/CssParser.g4 by ANTLR 4.13.1
package ANT;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CssParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LBRACE=1, RBRACE=2, SEMICOLON=3, COLON=4, COMMA=5, LPAREN=6, RPAREN=7, 
		LBRACK=8, RBRACK=9, STAR=10, DOT=11, HASH=12, AT=13, PERCENT=14, SLASH=15, 
		PLUS=16, MINUS=17, GT=18, LT=19, TILDE=20, DOLLAR=21, PIPE=22, EQ=23, 
		EXCLAMATION=24, PX=25, EM=26, REM=27, VH=28, VW=29, VMAX=30, VMIN=31, 
		PERCENTAGE=32, DEG=33, GRAD=34, RAD=35, TURN=36, MS=37, S=38, CM=39, MM=40, 
		IN=41, PT=42, PC=43, CH=44, EX=45, FR=46, IMPORTANT=47, AUTO=48, NONE=49, 
		INITIAL=50, INHERIT=51, REVERT=52, UNSET=53, TRANSPARENT=54, CURRENTCOLOR=55, 
		FLEX=56, GRID=57, BLOCK=58, INLINE=59, INLINE_BLOCK=60, INLINE_FLEX=61, 
		INLINE_GRID=62, TABLE=63, RELATIVE=64, ABSOLUTE=65, FIXED=66, STATIC=67, 
		STICKY=68, CENTER=69, LEFT=70, RIGHT=71, TOP=72, BOTTOM=73, START=74, 
		END=75, JUSTIFY=76, LTR=77, RTL=78, TRUE=79, FALSE=80, FROM=81, TO=82, 
		MAX_CONTENT=83, MIN_CONTENT=84, FIT_CONTENT=85, AT_MEDIA=86, AT_IMPORT=87, 
		AT_KEYFRAMES=88, AT_FONT_FACE=89, AT_PAGE=90, AT_SUPPORTS=91, AT_CHARSET=92, 
		ONLY=93, NOT=94, AND=95, OR=96, WHITE=97, BLACK=98, RED=99, GREEN=100, 
		BLUE=101, YELLOW=102, PURPLE=103, ORANGE=104, GRAY=105, GREY=106, IDENTIFIER=107, 
		CUSTOM_PROPERTY=108, NUMBER=109, INTEGER=110, HEX_COLOR=111, STRING=112, 
		FUNCTION=113, CALC=114, VAR=115, URL=116, COMMENT=117, LINE_COMMENT=118, 
		WS=119, FUNC_CONTENT=120, FUNC_TO=121, FUNC_FROM=122, FUNC_WS=123, URL_RPAREN=124, 
		URL_CONTENT=125, FUNC_CENTER=126, FUNC_LEFT=127, FUNC_RIGHT=128, FUNC_TOP=129, 
		FUNC_BOTTOM=130;
	public static final int
		RULE_stylesheet = 0, RULE_charsetRule = 1, RULE_importRule = 2, RULE_mediaQueryRule = 3, 
		RULE_mediaQueryList = 4, RULE_mediaQuery = 5, RULE_mediaType = 6, RULE_mediaExpression = 7, 
		RULE_mediaFeature = 8, RULE_keyframesRule = 9, RULE_keyframeBlock = 10, 
		RULE_keyframeSelector = 11, RULE_fontFaceRule = 12, RULE_supportsRule = 13, 
		RULE_supportsCondition = 14, RULE_supportsInParens = 15, RULE_atRule = 16, 
		RULE_block = 17, RULE_cssRule = 18, RULE_selectorGroup = 19, RULE_selector = 20, 
		RULE_combinator = 21, RULE_simpleSelector = 22, RULE_elementName = 23, 
		RULE_idSelector = 24, RULE_classSelector = 25, RULE_attributeSelector = 26, 
		RULE_attributeName = 27, RULE_attributeMatcher = 28, RULE_attributeValue = 29, 
		RULE_pseudoSelector = 30, RULE_declaration = 31, RULE_property = 32, RULE_important = 33, 
		RULE_value = 34, RULE_expr = 35, RULE_term = 36, RULE_literalValue = 37, 
		RULE_unit = 38, RULE_keywordValue = 39, RULE_color_name = 40, RULE_operator = 41, 
		RULE_functionValue = 42, RULE_funcContent = 43, RULE_calcFunction = 44, 
		RULE_varFunction = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"stylesheet", "charsetRule", "importRule", "mediaQueryRule", "mediaQueryList", 
			"mediaQuery", "mediaType", "mediaExpression", "mediaFeature", "keyframesRule", 
			"keyframeBlock", "keyframeSelector", "fontFaceRule", "supportsRule", 
			"supportsCondition", "supportsInParens", "atRule", "block", "cssRule", 
			"selectorGroup", "selector", "combinator", "simpleSelector", "elementName", 
			"idSelector", "classSelector", "attributeSelector", "attributeName", 
			"attributeMatcher", "attributeValue", "pseudoSelector", "declaration", 
			"property", "important", "value", "expr", "term", "literalValue", "unit", 
			"keywordValue", "color_name", "operator", "functionValue", "funcContent", 
			"calcFunction", "varFunction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'['", "']'", null, null, 
			"'#'", "'@'", null, null, null, null, "'>'", "'<'", "'~'", "'$'", "'|'", 
			"'='", "'!'", null, null, null, null, null, "'vmax'", "'vmin'", null, 
			null, "'grad'", "'rad'", "'turn'", null, null, "'cm'", "'mm'", "'in'", 
			"'pt'", "'pc'", "'ch'", "'ex'", null, "'!important'", "'auto'", "'none'", 
			"'initial'", "'inherit'", "'revert'", "'unset'", "'transparent'", "'currentColor'", 
			"'flex '", "'grid '", "'block '", "'inline '", "'inline-block '", "'inline-flex '", 
			"'inline-grid '", "'table '", "'relative '", "'absolute '", "'fixed '", 
			"'static '", "'sticky '", "'center '", "'left '", "'right '", "'top '", 
			"'bottom '", "'start '", "'end '", "'justify '", "'ltr '", "'rtl '", 
			"'true '", "'false '", null, null, "'max-content'", "'min-content'", 
			"'fit-content'", "'@media'", "'@import'", "'@keyframes'", "'@font-face'", 
			"'@page'", "'@supports'", "'@charset'", "'only'", "'not'", "'and'", "'or'", 
			"'white'", "'black'", "'red'", "'green'", "'blue'", "'yellow'", "'purple'", 
			"'orange'", "'gray'", "'grey'", null, null, null, null, null, null, null, 
			"'calc('", "'var('", "'url('", null, null, null, null, null, null, null, 
			null, null, "'center'", "'left'", "'right'", "'top'", "'bottom'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LBRACE", "RBRACE", "SEMICOLON", "COLON", "COMMA", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "STAR", "DOT", "HASH", "AT", "PERCENT", "SLASH", 
			"PLUS", "MINUS", "GT", "LT", "TILDE", "DOLLAR", "PIPE", "EQ", "EXCLAMATION", 
			"PX", "EM", "REM", "VH", "VW", "VMAX", "VMIN", "PERCENTAGE", "DEG", "GRAD", 
			"RAD", "TURN", "MS", "S", "CM", "MM", "IN", "PT", "PC", "CH", "EX", "FR", 
			"IMPORTANT", "AUTO", "NONE", "INITIAL", "INHERIT", "REVERT", "UNSET", 
			"TRANSPARENT", "CURRENTCOLOR", "FLEX", "GRID", "BLOCK", "INLINE", "INLINE_BLOCK", 
			"INLINE_FLEX", "INLINE_GRID", "TABLE", "RELATIVE", "ABSOLUTE", "FIXED", 
			"STATIC", "STICKY", "CENTER", "LEFT", "RIGHT", "TOP", "BOTTOM", "START", 
			"END", "JUSTIFY", "LTR", "RTL", "TRUE", "FALSE", "FROM", "TO", "MAX_CONTENT", 
			"MIN_CONTENT", "FIT_CONTENT", "AT_MEDIA", "AT_IMPORT", "AT_KEYFRAMES", 
			"AT_FONT_FACE", "AT_PAGE", "AT_SUPPORTS", "AT_CHARSET", "ONLY", "NOT", 
			"AND", "OR", "WHITE", "BLACK", "RED", "GREEN", "BLUE", "YELLOW", "PURPLE", 
			"ORANGE", "GRAY", "GREY", "IDENTIFIER", "CUSTOM_PROPERTY", "NUMBER", 
			"INTEGER", "HEX_COLOR", "STRING", "FUNCTION", "CALC", "VAR", "URL", "COMMENT", 
			"LINE_COMMENT", "WS", "FUNC_CONTENT", "FUNC_TO", "FUNC_FROM", "FUNC_WS", 
			"URL_RPAREN", "URL_CONTENT", "FUNC_CENTER", "FUNC_LEFT", "FUNC_RIGHT", 
			"FUNC_TOP", "FUNC_BOTTOM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CssParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CssParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StylesheetContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CssParser.EOF, 0); }
		public CharsetRuleContext charsetRule() {
			return getRuleContext(CharsetRuleContext.class,0);
		}
		public List<ImportRuleContext> importRule() {
			return getRuleContexts(ImportRuleContext.class);
		}
		public ImportRuleContext importRule(int i) {
			return getRuleContext(ImportRuleContext.class,i);
		}
		public List<CssRuleContext> cssRule() {
			return getRuleContexts(CssRuleContext.class);
		}
		public CssRuleContext cssRule(int i) {
			return getRuleContext(CssRuleContext.class,i);
		}
		public List<AtRuleContext> atRule() {
			return getRuleContexts(AtRuleContext.class);
		}
		public AtRuleContext atRule(int i) {
			return getRuleContext(AtRuleContext.class,i);
		}
		public StylesheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylesheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).enterStylesheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).exitStylesheet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CssParserVisitor ) return ((CssParserVisitor<? extends T>)visitor).visitStylesheet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StylesheetContext stylesheet() throws RecognitionException {
		StylesheetContext _localctx = new StylesheetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stylesheet);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(92);
				charsetRule();
				}
				break;
			}
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(95);
					importRule();
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1383730L) != 0) || ((((_la - 86)) & ~0x3f) == 0 && ((1L << (_la - 86)) & 8592031855L) != 0)) {
				{
				setState(103);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LBRACE:
				case COLON:
				case COMMA:
				case LBRACK:
				case STAR:
				case DOT:
				case HASH:
				case PLUS:
				case GT:
				case TILDE:
				case IDENTIFIER:
				case WS:
					{
					setState(101);
					cssRule();
					}
					break;
				case AT_MEDIA:
				case AT_IMPORT:
				case AT_KEYFRAMES:
				case AT_FONT_FACE:
				case AT_SUPPORTS:
				case AT_CHARSET:
					{
					setState(102);
					atRule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(108);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CharsetRuleContext extends ParserRuleContext {
		public TerminalNode AT_CHARSET() { return getToken(CssParser.AT_CHARSET, 0); }
		public TerminalNode STRING() { return getToken(CssParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(CssParser.SEMICOLON, 0); }
		public CharsetRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charsetRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).enterCharsetRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).exitCharsetRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CssParserVisitor ) return ((CssParserVisitor<? extends T>)visitor).visitCharsetRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CharsetRuleContext charsetRule() throws RecognitionException {
		CharsetRuleContext _localctx = new CharsetRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_charsetRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(AT_CHARSET);
			setState(111);
			match(STRING);
			setState(112);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportRuleContext extends ParserRuleContext {
		public TerminalNode AT_IMPORT() { return getToken(CssParser.AT_IMPORT, 0); }
		public TerminalNode SEMICOLON() { return getToken(CssParser.SEMICOLON, 0); }
		public TerminalNode STRING() { return getToken(CssParser.STRING, 0); }
		public TerminalNode URL() { return getToken(CssParser.URL, 0); }
		public MediaQueryListContext mediaQueryList() {
			return getRuleContext(MediaQueryListContext.class,0);
		}
		public ImportRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).enterImportRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).exitImportRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CssParserVisitor ) return ((CssParserVisitor<? extends T>)visitor).visitImportRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportRuleContext importRule() throws RecognitionException {
		ImportRuleContext _localctx = new ImportRuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(AT_IMPORT);
			setState(115);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==URL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN || ((((_la - 93)) & ~0x3f) == 0 && ((1L << (_la - 93)) & 16387L) != 0)) {
				{
				setState(116);
				mediaQueryList();
				}
			}

			setState(119);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MediaQueryRuleContext extends ParserRuleContext {
		public TerminalNode AT_MEDIA() { return getToken(CssParser.AT_MEDIA, 0); }
		public MediaQueryListContext mediaQueryList() {
			return getRuleContext(MediaQueryListContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public MediaQueryRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mediaQueryRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).enterMediaQueryRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).exitMediaQueryRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CssParserVisitor ) return ((CssParserVisitor<? extends T>)visitor).visitMediaQueryRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MediaQueryRuleContext mediaQueryRule() throws RecognitionException {
		MediaQueryRuleContext _localctx = new MediaQueryRuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mediaQueryRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(AT_MEDIA);
			setState(122);
			mediaQueryList();
			setState(123);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MediaQueryListContext extends ParserRuleContext {
		public List<MediaQueryContext> mediaQuery() {
			return getRuleContexts(MediaQueryContext.class);
		}
		public MediaQueryContext mediaQuery(int i) {
			return getRuleContext(MediaQueryContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CssParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CssParser.COMMA, i);
		}
		public MediaQueryListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mediaQueryList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).enterMediaQueryList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).exitMediaQueryList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CssParserVisitor ) return ((CssParserVisitor<? extends T>)visitor).visitMediaQueryList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MediaQueryListContext mediaQueryList() throws RecognitionException {
		MediaQueryListContext _localctx = new MediaQueryListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mediaQueryList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			mediaQuery();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(126);
				match(COMMA);
				setState(127);
				mediaQuery();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MediaQueryContext extends ParserRuleContext {
		public MediaTypeContext mediaType() {
			return getRuleContext(MediaTypeContext.class,0);
		}
		public List<TerminalNode> AND() { return getTokens(CssParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(CssParser.AND, i);
		}
		public List<MediaExpressionContext> mediaExpression() {
			return getRuleContexts(MediaExpressionContext.class);
		}
		public MediaExpressionContext mediaExpression(int i) {
			return getRuleContext(MediaExpressionContext.class,i);
		}
		public TerminalNode ONLY() { return getToken(CssParser.ONLY, 0); }
		public TerminalNode NOT() { return getToken(CssParser.NOT, 0); }
		public MediaQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mediaQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).enterMediaQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).exitMediaQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CssParserVisitor ) return ((CssParserVisitor<? extends T>)visitor).visitMediaQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MediaQueryContext mediaQuery() throws RecognitionException {
		MediaQueryContext _localctx = new MediaQueryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mediaQuery);
		int _la;
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ONLY:
			case NOT:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ONLY || _la==NOT) {
					{
					setState(133);
					_la = _input.LA(1);
					if ( !(_la==ONLY || _la==NOT) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(136);
				mediaType();
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND) {
					{
					{
					setState(137);
					match(AND);
					setState(138);
					mediaExpression();
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				mediaExpression();
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND) {
					{
					{
					setState(145);
					match(AND);
					setState(146);
					mediaExpression();
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MediaTypeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CssParser.IDENTIFIER, 0); }
		public MediaTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mediaType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).enterMediaType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).exitMediaType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CssParserVisitor ) return ((CssParserVisitor<? extends T>)visitor).visitMediaType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MediaTypeContext mediaType() throws RecognitionException {
		MediaTypeContext _localctx = new MediaTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mediaType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MediaExpressionContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(CssParser.LPAREN, 0); }
		public MediaFeatureContext mediaFeature() {
			return getRuleContext(MediaFeatureContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(CssParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(CssParser.COLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MediaExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mediaExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).enterMediaExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CssParserListener ) ((CssParserListener)listener).exitMediaExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CssParserVisitor ) return ((CssParserVisitor<? extends T>)visitor).visitMediaExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MediaExpressionContext mediaExpression() throws RecognitionException {
		MediaExpressionContext _localctx = new MediaExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mediaExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(LPAREN);
			setState(157);
			mediaFeature();
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(158);
				match(COLON);
				setState(159);
				expr();
				}
			}

			setState(162);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
